testsuite/tests/typecheck/should_fail/tcfail184.stderr

tcfail184.hs:9:19: error:
    • Illegal polymorphic type: forall a. Ord a => [a] -> [a]
      Perhaps you intended to use RankNTypes
    • In the definition of data constructor ‘MkSwizzle’
      In the newtype declaration for ‘Swizzle’
